# rpi_weather_display

./: .dockerignore  .gitignore  .safety-policy.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  codecov.yml  config.example.yaml  owm_icon_map.csv  path_resolution_summary.md  pyproject.toml  pyrightconfig.json
.cursor/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: README.md  ci.yml  docs.yml
deploy/: rpi-weather-display.service
deploy/scripts/: build_sprite.py  fix_svg_color.sh  icons_build.sh  install.sh  optimize-power.sh  track_code_quality.py  trim_svgs.sh
docs/: OPERATION.md  POWER_OPTIMIZATION.md  SECURITY.md  TROUBLESHOOTING.md  docstring_examples.md
src/rpi_weather_display/: __init__.py  constants.py  exceptions.py
src/rpi_weather_display/client/: battery_threshold_manager.py  display.py  image_processor.py  main.py  partial_refresh_manager.py  power.py  scheduler.py  sheduler.py  text_renderer.py
src/rpi_weather_display/models/: config.py  system.py  weather.py
src/rpi_weather_display/server/: api.py  browser_manager.py  main.py  moon_phase_helper.py  renderer.py  template_filter_manager.py  time_formatter.py  weather_calculator.py  weather_icon_mapper.py  wind_helper.py
src/rpi_weather_display/utils/: README.md  __init__.py  battery_monitor.py  battery_utils.py  cache_manager.py  early_error_handler.py  error_utils.py  file_utils.py  logging.py  memory_profiler.py  network.py  path_utils.py  pijuice_adapter.py  power_manager.py  power_state_controller.py  system_metrics_collector.py  time_utils.py
static/css/: style.css
stubs/pijuice/: __init__.pyi
templates/: _base.html.j2  _current.html.j2  _forecast_daily.html.j2  _forecast_hourly.html.j2  _header.html.j2  dashboard.html.j2  error.html.j2  weather.html.j2
tests/: conftest.py  test_exceptions.py
tests/client/: test_battery_threshold_manager.py  test_client_main.py  test_client_main_coverage.py  test_display.py  test_display_additional.py  test_display_coverage.py  test_display_minimal.py  test_image_processor.py  test_partial_refresh_manager.py  test_power.py  test_scheduler.py  test_text_renderer.py
tests/data/: mock_weather_response.json  test_config.yaml
tests/models/: __init__.py  test_config.py  test_system.py  test_weather.py
tests/server/: conftest.py  test_api.py  test_api_client.py  test_api_server.py  test_browser_manager.py  test_renderer.py  test_server_main.py  test_server_main_additional.py  test_server_main_coverage.py  test_server_main_updated.py  test_template_filter_manager.py  test_time_formatter.py  test_weather_calculator.py  test_weather_icon_mapper.py
tests/utils/: test_battery_monitor.py  test_battery_monitor_coverage.py  test_battery_utils.py  test_cache_manager.py  test_dynamic_wakeup.py  test_early_error_handler.py  test_file_utils.py  test_logging.py  test_memory_profiler.py  test_network.py  test_path_utils.py  test_pijuice_adapter.py  test_power_manager.py  test_power_manager_additional.py  test_power_manager_coverage.py  test_power_manager_final.py  test_power_state_controller.py  test_system_metrics_collector.py  test_time_until_quiet_change.py  test_time_utils.py
utils/test_helpers/: __init__.py  power_manager_test_helpers.py
